--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -1082,6 +1082,9 @@ on boot
     write /dev/sys/fs/by-name/userdata/gc_urgent_sleep_time 50
     write /dev/sys/fs/by-name/userdata/iostat_enable 1
 
+    # set readahead multiplier for POSIX_FADV_SEQUENTIAL files
+    write /dev/sys/fs/by-name/userdata/seq_file_ra_mul 16
+
     # limit discard size to 128MB in order to avoid long IO latency
     # for filesystem tuning first
     write /dev/sys/block/by-name/userdata/queue/discard_max_bytes 134217728
